Adjust save file path to be more system specific.